# RemoteControl_4

./: .gitignore  Gmail_Test.sln  Instruction.txt  README.md
Project1/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Main.cpp  Project1.vcxproj  Project1.vcxproj.filters  access_list.json  copyDLLs.bat  token_storage.json
Project1/Client/: Client_Gmail.cpp  Client_Gmail.h
Project1/Functions/: EmailFetcher.cpp  EmailFetcher.h  FileList.cpp  FileList.h  KeyboardTracker.h  RunningApps.cpp  RunningApps.h  ScreenshotHandler.cpp  ServiceList.cpp  ServiceList.h  WebcamCapture.cpp  WebcamCapture.h
Project1/GUI/App/: RemoteControlApp.cpp
Project1/GUI/Frames/: ServerMonitorFrame.cpp
Project1/GmailAPI/: GmailAPI.cpp  GmailAPI.h
Project1/Interface/: MenuSystem.cpp  MenuSystem.h
Project1/Libs/: Header.h
Project1/RemoteControl/: SystemInfo.cpp  SystemInfo.h
Project1/Server/: EmailMonitor.h  ServerManager.cpp  ServerManager.h
